--- a/Restaurant/src/main/resources/templates/registration.html
+++ b/Restaurant/src/main/resources/templates/registration.html
@@ -18,7 +18,7 @@
         <div class="card border-0 shadow">
           <div class="card-body">
             <div th:if="${param.success}">
-              <div class="alert alert-info">Работник успешно добвлен!</div>
+              <div class="alert alert-info">Вы успешно зарегистрировались</div>
             </div>
             <div class="text-center mt-3">
               <h3 class="mb-5">Регистрация</h3>
